# ExcelAi-v2

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  users.py
backend/app/config/: settings.py
backend/app/database/: create_tables.py  init_db.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  user.py
backend/app/security/: hashing.py  jwt.py
backend/app/services/: auth_service.py
backend/tests/: test_hash.py  test_jwt.py
